--- a/webapp/templates/404.html
+++ b/webapp/templates/404.html
@@ -23,7 +23,7 @@ Error 404
                     </div>
                     <div class="error-actions go-home">
                         <a href="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                            Take Me Home </a>
+                            Go back to Home </a>
                     </div>
                 </div>
             </div>
